# embed_time

./: .cruft.json  .gitignore  README.md  pyproject.toml
.github/workflows/: black.yaml  tests.yaml
CPC/: cpc.py  extract_embedding_and_plot.py  run_simple_classification.py  test.ipynb  test_mlp_classification.py  test_rs_discovering_plate_confounder.ipynb  test_rs_per_plate_norm.ipynb  train.ipynb  train.py  training_rs.py  training_rs_masked.py  training_rs_masked_only_BF.py  training_rs_masked_only_BRA.py  training_rs_per_plate_norm.py  training_rs_per_plate_norm_less_dimensions.py
CPC/models/: convnext.py  mlp.py  nn.py  pixelcnn.py  utils.py
embed_time_runs/First Try/: events.out.tfevents.1725148646.ip-172-31-33-156.124415.0  events.out.tfevents.1725148960.ip-172-31-33-156.125621.0
embed_time_static_runs/static_resnet18-Vae/: events.out.tfevents.1725210973.ip-172-31-33-156.133891.0  (+4 more)
notebooks/: MNIST_VAE.ipynb  MNIST_VAE_2.ipynb  README.md  VAE_from_unet.ipynb  VAE_model.py  benchmark_dataloader.py  classifier_tests.ipynb  dataset_neuromast.ipynb  dataset_static.ipynb  dataset_static.py  make_intermediate_by_cells.py  make_intermediate_by_genes.py  reader.ipynb  restructure.py  simclr_example.ipynb  test_neuromast_3D.ipynb  training_static.ipynb
old/: VAE_model_from_scratches.py
scripts/: 20240901_ab_training_loop_resnet18.py  20240902_ab_evaluation.py  README.md  constants.py  data_reader_static.py  evaluate_md.py  grid_search.py  metadata_collect_neuromast.py  metadata_neuromast_balance.py  metadata_test_10timepoints.py  metadata_train_10timepoints.py  metadata_train_unbalanced.py  mouseloader.py  navigate_worms.py  print_model_ac.py  test_resnet.py  train.py  train_resnet.py  train_vgg_md.py  training_loop.py  training_loop_VaeResnet18.py  training_loop_VaeResnet18_ac.py  training_loop_basic_md.py  training_loop_cond_test_md.py  training_loop_md.py  training_loop_neuromast.py  training_loop_resnet18.py  training_loop_resnet18_linear_md.py  training_loop_resnet18_md.py  training_loop_resnet18_md_grid.py  training_loop_static.py  transposedata.py
scripts/nontargeting_experiments/: train_vgg.py  (+3 more)
src/: data_ij.py  model_VAE_resnet18.py
tests/: test_vae.py
(+108 files in other folders)
