[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "embed_time"
description = "DL@MBL course repository for the embed_time team"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "ryan.savill@web.de ", name = "DLMBL " },
]
dynamic = ["version"]
dependencies = [
    "pandas",
    "tifffile",
    "torch",
    "torchvision",
    "scikit-image",
    "matplotlib",
    "tqdm",
    "pathlib"
    "torch"
]
[project.optional-dependencies]
dev = [
    "pandas",
    "tifffile",
    "torch",
    "torchvision",
    "scikit-image",
    "matplotlib",
    "tqdm",
    "pathlib"
    "torch"
]